fix: remove wrong background

--- a/src/components/GameItem/gameItem.style.scss
+++ b/src/components/GameItem/gameItem.style.scss
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: center;
     font-family: 'Roboto';
-    background-image: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 200'%3E%3Cpath d='M10 10h123v123H10z'/%3E%3C/svg%3E" );
 
     &__link {
         text-decoration: none;
